--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,16 @@
     tools:context="de.int80.gothbingo.MainActivity">
 
     <TableLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@android:color/black"
         android:paddingTop="1dp"
-        app:layout_constraintHeight_default="spread"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <TableRow
             android:layout_width="match_parent"
@@ -32,11 +35,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="1"
                 app:coordY="1" />
 
@@ -47,11 +50,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="2"
                 app:coordY="1" />
 
@@ -62,11 +65,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="3"
                 app:coordY="1" />
 
@@ -77,11 +80,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="4"
                 app:coordY="1" />
 
@@ -92,11 +95,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="5"
                 app:coordY="1" />
         </TableRow>
@@ -116,11 +119,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="1"
                 app:coordY="2" />
 
@@ -131,11 +134,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="2"
                 app:coordY="2" />
 
@@ -146,11 +149,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="3"
                 app:coordY="2" />
 
@@ -161,11 +164,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="4"
                 app:coordY="2" />
 
@@ -176,11 +179,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="5"
                 app:coordY="2" />
         </TableRow>
@@ -200,11 +203,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="1"
                 app:coordY="3" />
 
@@ -215,11 +218,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="2"
                 app:coordY="3" />
 
@@ -241,11 +244,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="4"
                 app:coordY="3" />
 
@@ -256,11 +259,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="5"
                 app:coordY="3" />
         </TableRow>
@@ -280,11 +283,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="1"
                 app:coordY="4" />
 
@@ -295,11 +298,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="2"
                 app:coordY="4" />
 
@@ -310,11 +313,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="3"
                 app:coordY="4" />
 
@@ -325,11 +328,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="4"
                 app:coordY="4" />
 
@@ -340,11 +343,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="5"
                 app:coordY="4" />
         </TableRow>
@@ -364,11 +367,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="1"
                 app:coordY="5" />
 
@@ -379,26 +382,26 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="2"
                 app:coordY="5" />
 
             <de.int80.gothbingo.BingoFieldView
-                android:id="@+id/fieldr35"
+                android:id="@+id/field35"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="3"
                 app:coordY="5" />
 
@@ -409,11 +412,11 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="4"
                 app:coordY="5" />
 
@@ -424,13 +427,14 @@
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
                 android:background="@android:color/background_light"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
-                android:onClick="onBingoFieldClick"
-                android:clickable="true"
                 app:coordX="5"
                 app:coordY="5" />
+
         </TableRow>
     </TableLayout>
 </android.support.constraint.ConstraintLayout>
