--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field11"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
@@ -46,7 +46,7 @@
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field21"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
@@ -61,7 +61,7 @@
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field31"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
@@ -76,7 +76,7 @@
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field41"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
@@ -91,7 +91,7 @@
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field51"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
@@ -191,7 +191,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             android:paddingBottom="1dp"
@@ -271,7 +271,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             android:paddingBottom="1dp"
@@ -355,7 +355,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             android:paddingBottom="1dp"
