--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -443,8 +443,7 @@
         android:id="@+id/WinMessageOverlay"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.7"
-        android:background="@android:color/darker_gray"
+        android:background="#cc444444"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
