--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="0" />
 
@@ -67,6 +68,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="0" />
 
@@ -82,6 +84,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="2"
                 app:coordY="0" />
 
@@ -97,6 +100,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="0" />
 
@@ -112,6 +116,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="0" />
         </TableRow>
@@ -136,6 +141,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="1" />
 
@@ -151,6 +157,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="1" />
 
@@ -166,6 +173,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="2"
                 app:coordY="1" />
 
@@ -181,6 +189,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="1" />
 
@@ -196,6 +205,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="1" />
         </TableRow>
@@ -220,6 +230,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="2" />
 
@@ -235,6 +246,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="2" />
 
@@ -261,6 +273,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="2" />
 
@@ -276,6 +289,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="2" />
         </TableRow>
@@ -300,6 +314,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="3" />
 
@@ -315,6 +330,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="3" />
 
@@ -330,6 +346,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="2"
                 app:coordY="3" />
 
@@ -345,6 +362,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="3" />
 
@@ -360,6 +378,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="3" />
         </TableRow>
@@ -384,6 +403,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="4" />
 
@@ -399,6 +419,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="4" />
 
@@ -414,6 +435,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="2"
                 app:coordY="4" />
 
@@ -429,6 +451,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="4" />
 
@@ -444,6 +467,7 @@
                 android:onClick="onBingoFieldClick"
                 android:text="TextView"
                 android:textColor="@android:color/primary_text_light"
+                android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="4" />
 
