Don't hardcode strings
Also, add different strings for English and German

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -491,7 +491,7 @@
             android:id="@+id/WinMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Foo wins"
+            android:text="@string/win_message"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="48sp"
@@ -509,7 +509,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:onClick="onPlayAgainButtonClick"
-            android:text="Tap here to play again"
+            android:text="@string/play_again_button_text"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="36sp"
