--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -5,13 +5,13 @@
     <item
         android:id="@+id/RefreshButton"
         android:icon="@drawable/ic_action_refresh"
-        android:title="Neu Laden"
+        android:title="@string/refresh_button_text"
         android:visible="true"
         app:showAsAction="always" />
     <item
         android:id="@+id/ExitButton"
         android:icon="@drawable/ic_action_exit_to_app"
-        android:title="Beenden"
+        android:title="@string/exit_button_text"
         android:visible="true"
         app:showAsAction="always" />
 </menu>
