--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputEditTextfoo
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/gameID"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
