Theming: Define all colors in one place

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@color/fieldSeparatorColor"
     tools:context="de.int80.gothbingo.MainActivity">
 
     <android.support.v7.widget.Toolbar
@@ -22,7 +22,7 @@
         android:id="@+id/BingoFieldLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@android:color/black"
+        android:background="@color/fieldSeparatorColor"
         android:paddingTop="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -35,7 +35,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@android:color/black"
             android:gravity="center"
             android:paddingBottom="1dp"
             android:paddingRight="1dp">
@@ -46,10 +45,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="0" />
@@ -60,10 +59,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="0" />
@@ -74,10 +73,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="2"
                 app:coordY="0" />
@@ -88,10 +87,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="0" />
@@ -102,10 +101,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="0" />
@@ -125,10 +124,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="1" />
@@ -139,10 +138,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="1" />
@@ -153,10 +152,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="2"
                 app:coordY="1" />
@@ -167,10 +166,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="1" />
@@ -181,10 +180,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="1" />
@@ -204,10 +203,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="2" />
@@ -218,10 +217,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="2" />
@@ -232,10 +231,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="#666"
+                android:background="@color/checkedFieldBackgroundColor"
                 android:gravity="center"
                 android:text="@string/free_space_text"
-                android:textColor="@android:color/primary_text_dark" />
+                android:textColor="@color/checkedFieldTextColor" />
 
             <de.int80.gothbingo.BingoFieldView
                 android:id="@+id/field43"
@@ -243,10 +242,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="2" />
@@ -257,10 +256,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="2" />
@@ -280,10 +279,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="3" />
@@ -294,10 +293,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="3" />
@@ -308,10 +307,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="2"
                 app:coordY="3" />
@@ -322,10 +321,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="3" />
@@ -336,10 +335,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="3" />
@@ -359,10 +358,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="0"
                 app:coordY="4" />
@@ -373,10 +372,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="1"
                 app:coordY="4" />
@@ -387,10 +386,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="2"
                 app:coordY="4" />
@@ -401,10 +400,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="3"
                 app:coordY="4" />
@@ -415,10 +414,10 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
-                android:background="@android:color/background_light"
+                android:background="@color/fieldBackgroundColor"
                 android:clickable="true"
                 android:gravity="center"
-                android:textColor="@android:color/primary_text_light"
+                android:textColor="@color/fieldTextColor"
                 android:hyphenationFrequency="full"
                 app:coordX="4"
                 app:coordY="4" />
@@ -430,7 +429,7 @@
         android:id="@+id/WinMessageOverlay"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#cc444444"
+        android:background="@color/winMessageBackgroundColor"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -445,7 +444,7 @@
             android:layout_height="wrap_content"
             android:text="@string/win_message"
             android:textAlignment="center"
-            android:textColor="@android:color/white"
+            android:textColor="@color/winMessageTextColor"
             android:textSize="48sp"
             android:textStyle="bold"
             android:alpha="1.0"
@@ -463,7 +462,7 @@
             android:onClick="onPlayAgainButtonClick"
             android:text="@string/play_again_button_text"
             android:textAlignment="center"
-            android:textColor="@android:color/white"
+            android:textColor="@color/winMessageTextColor"
             android:textSize="36sp"
             android:textStyle="bold"
             android:alpha="1.0"
