Fix alignment of win message

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -443,7 +443,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/win_message"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textColor="@color/winMessageTextColor"
             android:textSize="48sp"
             android:textStyle="bold"
@@ -461,7 +461,7 @@
             android:clickable="true"
             android:onClick="onPlayAgainButtonClick"
             android:text="@string/play_again_button_text"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textColor="@color/winMessageTextColor"
             android:textSize="36sp"
             android:textStyle="bold"
