--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -3,6 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/SuggestButton"
+        android:icon="@drawable/ic_add_circle_outline_white_24dp"
+        android:title="@string/suggest_button_text"
+        android:visible="true"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/RefreshButton"
         android:icon="@drawable/ic_action_refresh"
         android:title="@string/refresh_button_text"
